--- a/MyWebsite/Views/Projects/Index.cshtml
+++ b/MyWebsite/Views/Projects/Index.cshtml
@@ -4,7 +4,7 @@
 
 
 <div style="margin: 50px;">
-    <h3 style="margin-top:100px; text-align:center;font-weight:200; padding-bottom:10px; letter-spacing:1.5px; text-decoration:  underline">PROJECTS</h3>
+    <h3 style="margin-top:100px; text-align:center; padding-bottom:10px; text-decoration:  underline">PROJECTS</h3>
     <div class="row">
         @*GITHUB*@
         <div class="col l4 m12 s12">
