--- a/MyWebsite/Views/Manage/ChangePassword.cshtml
+++ b/MyWebsite/Views/Manage/ChangePassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ChangePasswordViewModel
 @{ViewData.AddActivePage(ManageNavPages.ChangePassword);}
 
-<h3 style="text-align:center; margin-top:100px; margin-bottom: 30px; font-weight:200; letter-spacing:1.5px;">CHANGE PASSWORD</h3>
+<h3 style="text-align:center; margin-top:150px; margin-bottom: 30px; font-weight:200; letter-spacing:1.5px;">CHANGE PASSWORD</h3>
 
 @Html.Partial("_StatusMessage", Model.StatusMessage)
 <div style="margin:50px 100px;">
@@ -23,7 +23,7 @@
                     <input asp-for="ConfirmPassword" style="color: #cfd8dc" />
                     <span asp-validation-for="ConfirmPassword"></span>
                 </div>
-                <button style="margin-top:10px; background-color:#81cac4; font-weight:bold;" type="submit" class=" waves-effect waves-light lightTeal-hover btn sharpCorners black-text">Update Password</button>
+                <button style="margin-top:10px;" type="submit" class="waves-effect waves-light btn sharpCorners black-btn">Update Password</button>
             </form>
             <div style="margin-top: 10px;">
                 <a class="hover-underline" onclick="window.history.go(-1)">Cancel</a>
