--- a/MyWebsite/Views/Manage/Index.cshtml
+++ b/MyWebsite/Views/Manage/Index.cshtml
@@ -8,7 +8,7 @@
 }
 
 
-<h3 style="text-align:center; margin-top:100px; margin-bottom: 30px; font-weight:200; letter-spacing:1.5px;">MANAGE YOUR ACCOUNT</h3>
+<h3 style="text-align:center; margin-top:150px; margin-bottom: 30px; font-weight:200; letter-spacing:1.5px;">MANAGE YOUR ACCOUNT</h3>
 <div><p style="text-align: center; margin-top: 10px; color: #81cac4;">@ViewBag.Updated</p></div>
 <div style="margin:50px 100px;">
     <div class="row">
@@ -20,7 +20,7 @@
                     <input asp-for="Email" class="form-control" style="color:#cfd8dc" />
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
-                <button style="margin-top:10px; background-color:#81cac4; font-weight:bold;" type="submit" class=" waves-effect waves-light lightTeal-hover btn sharpCorners black-text">Save Changes</button>
+                <button style="margin-top:10px;" type="submit" class="waves-effect waves-light btn sharpCorners black-btn">Save Changes</button>
             </form>
             <div style="margin-top: 10px;">
                 <p><a class="hover-underline" asp-action="ChangePassword">Change Password</a></p>
