--- a/MyWebsite/Views/Shared/_Layout.cshtml
+++ b/MyWebsite/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     @RenderSection("Scripts", required: false)
 
     <footer>
-        <div class="footer-copyright black">
+        <div class="footer-copyright black z-depth-5">
             <ul id="horizontal-list" class="center">
                 <li style="margin-right:20px;"> © 2018 Jordyn Thompson</li>
                 <li><a style="color:#cfd8dc;" a href="https://www.linkedin.com/in/jordynrachelthompson/" target="_blank"><i class="fab fa-linkedin footer-icon" style="font-size:35px; margin-top: 15px; margin-bottom: 15px;"></i></a></li>
