--- a/MyWebsite/Views/Budgets/Index.cshtml
+++ b/MyWebsite/Views/Budgets/Index.cshtml
@@ -40,62 +40,63 @@ else
                             <i class="material-icons left">create</i>Create <span style="color:#54b798">New</span> Budget Limits
                         </button>
                         <a href='@Url.Action("PastBudgets", "Budgets")' class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:30px;"><i class="material-icons left">date_range</i>View Past Budgets</a>
-                        <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect lightBrown-hover waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:30px;"><i class="material-icons left">trending_up</i>Budget Analytics</a>
+                        <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect lightBrown-hover waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:30px;"><i class="material-icons left">trending_up</i>Budget Insights</a>
                         <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:30px;"><i class="material-icons left">insert_chart</i>Transfer to Excel</a>
                     </div>
                 </div>
+                <h6 style="text-align: center; font-weight: bold; color: #D50000">@TempData["budgetLimitError"]</h6>
             </div>
 
             //Set Budget Form - Choose New Limits
-            <div id="hidden-set-budget-form" style="display:none;">
+            <div id="hidden-set-budget-form" style="display:none; margin-bottom: 20px;">
                 <form method="post" action="@Url.Action("Index", "Budgets", new { usePastBudgetLimit = false })">
                     <div style="margin-top:35px; text-align:center;">
-                        <button class="waves-effect waves-light btn-large sharpCorners black-text" style="background-color:#212121; font-weight:bold; font-size:20px;" type="submit" name="Save">
+                        <button class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color: #54b798; font-weight:bold; font-size:20px;" type="submit" name="Save">
                             <i class="material-icons left">local_atm</i>Save Budget Limits
                         </button>
                     </div>
                     <div class="row" style="margin-top:20px; margin-left: 200px; margin-right: 200px;">
-                        <div class="col s12 m6 l4">
-                            <h5 style="margin-top:77px; font-weight:bold;">Groceries/Food</h5>
+                        <div class="col s12 m12 l4">
+                            <h5 style="margin-top:77px; font-weight:bold;">Groceries | Restaurant</h5>
                             <div class="input-field">
-                                <i class="material-icons prefix" style="margin-top:30px; color:#b2dfdb;">attach_money</i>
+                                <i class="material-icons prefix" style="margin-top:30px; color:#54b798;">attach_money</i>
                                 <input name="GroceryLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
                             </div>
                         </div>
-                        <div class="col s12 m6 l4">
-                            <h5 style="margin-top:77px; font-weight:bold;">Housing/Rent</h5>
+                        <div class="col s12 m12 l4">
+                            <h5 style="margin-top:77px; font-weight:bold;">Mortgage | Rent</h5>
                             <div class="input-field">
-                                <i class="material-icons prefix" style="margin-top:30px; color:#b2dfdb;">attach_money</i>
+                                <i class="material-icons prefix" style="margin-top:30px; color:#54b798;">attach_money</i>
                                 <input name="HousingLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
                             </div>
                         </div>
-                        <div class="col s12 m6 l4">
+                        <div class="col s12 m12 l4">
                             <h5 style="margin-top:77px; font-weight:bold;">Entertainment</h5>
                             <div class="input-field">
-                                <i class="material-icons prefix" style="margin-top:30px; color:#b2dfdb;">attach_money</i>
+                                <i class="material-icons prefix" style="margin-top:30px; color:#54b798;">attach_money</i>
                                 <input name="EntLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
                             </div>
                         </div>
                     </div>
                     <div class="row" style="margin-top:80px; margin-left:200px; margin-right:200px;">
-                        <div class="col s12 m6 l4">
-                            <h5 style="margin-top:77px; font-weight:bold;">Bills</h5>
+                        <div class="col s12 m12 l4">
+                            <h5 style="margin-top:77px; font-weight:bold;">Bills | Payments</h5>
                             <div class="input-field">
-                                <i class="material-icons prefix" style="margin-top:30px; color:#b2dfdb;">attach_money</i>
+                                <i class="material-icons prefix" style="margin-top:30px; color:#54b798;">attach_money</i>
                                 <input name="BillsLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
                             </div>
                         </div>
-                        <div class="col s12 m6 l4">
-                            <h5 style="margin-top:77px; font-weight:bold;">Car/Gas</h5>
+                        <div class="col s12 m12 l4">
+                            <h5 style="margin-top:77px; font-weight:bold;">Gas | Auto</h5>
                             <div class="input-field">
-                                <i class="material-icons prefix" style="margin-top:30px; color:#b2dfdb;">attach_money</i>
+                                <i class="material-icons prefix" style="margin-top:30px; color:#54b798;">attach_money</i>
                                 <input name="GasLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
                             </div>
                         </div>
-                        <div class="col s12 m6 l4">
+                        <div class="col s12 m12 l4">
                             <h5 style="margin-top:77px; font-weight:bold;">Miscellaneous Expenses</h5>
                             <div class="input-field">
-                                <i class="material-icons prefix" style="margin-top:30px; color:#b2dfdb;">attach_money</i>
+                                <i class="material-icons prefix" style="margin-top:30px; color:#54b798;">attach_money</i>
                                 <input name="MiscLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
                             </div>
                         </div>
@@ -116,55 +117,54 @@ else
 
         else //Has Never Had Budget - Set Limits For First Time
         {
-            <div style="border-bottom: 1px dotted #b2dfdb;"></div>
-            <form method="post" action="@Url.Action("Index", "Budgets", new { usePastBudgetLimit = false })">
+            <form method="post" style="margin-bottom: 20px;" action="@Url.Action("Index", "Budgets", new { usePastBudgetLimit = false })">
                 <div style="margin-top:35px; text-align:center;">
-                    <button class="waves-effect waves-light btn-large black-text sharpCorners" style="background-color:#b2dfdb; font-weight:bold; font-size:20px;" type="submit" name="Save">
+                    <button class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:20px;" type="submit" name="Save">
                         <i class="material-icons left">local_atm</i>Set Budget Limits
                     </button>
                 </div>
                 <div class="row" style="margin-top:20px; margin-left:200px; margin-right:200px;">
-                    <div class="col s12 m6 l4">
-                        <h5 style="margin-top:77px; font-weight:bold;">Groceries/Food</h5>
+                    <div class="col s12 m12 l4">
+                        <h5 style="margin-top:77px; font-weight:bold;">Groceries | Restaurant</h5>
                         <div class="input-field">
-                            <i class="material-icons prefix" style="margin-top:30px; color:#b2dfdb;">attach_money</i>
+                            <i class="material-icons prefix" style="margin-top:30px; color:#54b798;">attach_money</i>
                             <input name="GroceryLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
                         </div>
                     </div>
-                    <div class="col s12 m6 l4">
-                        <h5 style="margin-top:77px; font-weight:bold;">Housing/Rent</h5>
+                    <div class="col s12 m12 l4">
+                        <h5 style="margin-top:77px; font-weight:bold;">Mortgage | Rent</h5>
                         <div class="input-field">
-                            <i class="material-icons prefix" style="margin-top:30px; color:#b2dfdb;">attach_money</i>
+                            <i class="material-icons prefix" style="margin-top:30px; color:#54b798;">attach_money</i>
                             <input name="HousingLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
                         </div>
                     </div>
-                    <div class="col s12 m6 l4">
+                    <div class="col s12 m12 l4">
                         <h5 style="margin-top:77px; font-weight:bold;">Entertainment</h5>
                         <div class="input-field">
-                            <i class="material-icons prefix" style="margin-top:30px; color:#b2dfdb;">attach_money</i>
+                            <i class="material-icons prefix" style="margin-top:30px; color:#54b798;">attach_money</i>
                             <input name="EntLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
                         </div>
                     </div>
                 </div>
                 <div class="row" style="margin-top:80px; margin-left:200px; margin-right:200px;">
-                    <div class="col s12 m6 l4">
-                        <h5 style="margin-top:77px; font-weight:bold;">Bills</h5>
+                    <div class="col s12 m12 l4">
+                        <h5 style="margin-top:77px; font-weight:bold;">Bills | Payments</h5>
                         <div class="input-field">
-                            <i class="material-icons prefix" style="margin-top:30px; color:#b2dfdb;">attach_money</i>
+                            <i class="material-icons prefix" style="margin-top:30px; color:#54b798;">attach_money</i>
                             <input name="BillsLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
                         </div>
                     </div>
-                    <div class="col s12 m6 l4">
-                        <h5 style="margin-top:77px; font-weight:bold;">Car/Gas</h5>
+                    <div class="col s12 m12 l4">
+                        <h5 style="margin-top:77px; font-weight:bold;">Gas | Auto</h5>
                         <div class="input-field">
-                            <i class="material-icons prefix" style="margin-top:30px; color:#b2dfdb;">attach_money</i>
+                            <i class="material-icons prefix" style="margin-top:30px; color:#54b798;">attach_money</i>
                             <input name="GasLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
                         </div>
                     </div>
-                    <div class="col s12 m6 l4">
+                    <div class="col s12 m12 l4">
                         <h5 style="margin-top:77px; font-weight:bold;">Miscellaneous Expenses</h5>
                         <div class="input-field">
-                            <i class="material-icons prefix" style="margin-top:30px; color:#b2dfdb;">attach_money</i>
+                            <i class="material-icons prefix" style="margin-top:30px; color:#54b798;">attach_money</i>
                             <input name="MiscLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
                         </div>
                     </div>
@@ -194,7 +194,7 @@ else
                 <a asp-action="Edit" asp-route-id="@item.Id" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">edit</i>Edit Budget Limits</a>
             }
             <a href='@Url.Action("PastBudgets", "Budgets")' class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">date_range</i>View Past Budgets</a>
-            <a href='@Url.Action("BudgetAnalytics", "Budgets")' class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">trending_up</i>Budget Analytics</a>
+            <a href='@Url.Action("BudgetInsights", "Budgets")' class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">trending_up</i>Budget Insights</a>
             <a href='@Url.Action("ExportExcel", "Budgets")' class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">insert_chart</i>Transfer to Excel</a>
         </div>
 
