--- a/MyWebsite/Views/Home/Index.cshtml
+++ b/MyWebsite/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 
 <h3 style="text-align:center; margin-top:-500px; margin-bottom: 300px; font-weight:200; font-size:30px; letter-spacing:1.5px;">TECHNOLOGIES USED</h3>
 
-<div class="container center-div" style="background-color:#020305; margin-top:-200px; margin-bottom:200px; z-index: 100; text-align:center; width:55%; padding:10px; border: .5px dotted #cfd8dc;">
+<div class="container center-div z-depth-5" style="background-color:#020305; margin-top:-200px; margin-bottom:200px; z-index: 100; text-align:center; width:55%; padding:10px; border: .5px dotted #cfd8dc;">
     <ul id="tech-used">
         <li>C#</li><li>ASP.NET MVC</li><li>Razor Syntax</li><li>LINQ</li>
         <li>Entity Framework</li><li>MS Visual Studio</li><li>Microsoft SQL Server</li>
