--- a/MyWebsite/Views/Budgets/_PastBudgets.cshtml
+++ b/MyWebsite/Views/Budgets/_PastBudgets.cshtml
@@ -34,7 +34,7 @@
                 var transactionsId = "transactions" + type.Key + month;
                 var count = 0;
 
-                <a class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" id=@transactionId style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">@iconSymbolType[iconCount]</i>@type.Value</a>
+                <a class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4 typeButton" id=@transactionId style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">@iconSymbolType[iconCount]</i>@type.Value</a>
                 <table class="table" id=@transactionsId align="center" style="display:none; width:25%; margin-bottom:25px;">
                     <tr style="border-bottom: 1px dotted #cfd8dc">
                         <th>Date</th>
@@ -75,3 +75,24 @@
         </div>
     }
 }
+
+
+
+<script>
+
+
+    $('.typeButton').click(function () {
+        var typeId = $('.typeButton').attr('id');
+        if ($('.typeButton').hasClass('clickedContent')) {
+            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold; font-size:20px; margin-top:10px;");
+            $("#" + typeId).removeClass("clickedContent");
+        }
+        else
+        {
+            $(this).css("cssText", "color: #525e78 !important; font-weight:bold; font-size:20px; margin-top:10px;");
+            $("#" + typeId).addClass("clickedContent");
+        }
+    });
+   
+
+</script>
