--- a/MyWebsite/wwwroot/css/site.css
+++ b/MyWebsite/wwwroot/css/site.css
@@ -263,3 +263,7 @@ input[type=search]:not(.browser-default):focus:not([readonly]) {
 #gitHubIcon:hover {
     color: #cfd8dc !important;
 }
+
+.purple-hover:hover {
+    color: #525e78 !important;
+}
