--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -13,8 +13,7 @@
 <div class="container">
     <div style="margin-top: 25px; text-align: center;">
         <p style="text-align:center; font-weight:bold; color:#54b798; margin-top:10px;">@ViewBag.Deleted</p>
-        <a href='@Url.Action("Index", "Budgets", new {userName = user})'; class="waves-effect waves-light btn-large sharpCorners lightBrown-hover grey darken-4" style="font-weight: bold; font-size: 20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
-        @*@Html.ActionLink("Return to Budget", "Index", "Budgets", new { userName = user }, new { @class = "grey-button" })*@
+        <a href='@Url.Action("Index", "Budgets")'; class="waves-effect waves-light btn-large sharpCorners lightBrown-hover grey darken-4" style="font-weight: bold; font-size: 20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
     </div>
     <h4 style="margin-top:55px; margin-bottom:25px; font-weight:bold; text-align:center">Add Transaction</h4>
     @*Validation Errors*@
@@ -232,9 +231,7 @@
 
 <script>
     $(document).ready(function () {
-        //$('.dropdown-trigger').dropdown();
         $('select').formSelect();
-        //var instance = M.FormSelect.getInstance(elem);
         Transactions();
     });
 
