--- a/MyWebsite/Views/Budgets/BudgetInsights.cshtml
+++ b/MyWebsite/Views/Budgets/BudgetInsights.cshtml
@@ -1,6 +1,9 @@
 ﻿
 <div style="text-align:center; margin-top:100px;"><p style="text-align:center;">@Html.Partial("_LoginPartial", 1)</p></div>
 <h3 style="text-align:center; margin-top:100px; text-decoration: underline">The Painless Budget</h3>
+<div style="margin-top: 25px; text-align: center;">
+    <a href='@Url.Action("Index", "Budgets")'; class="waves-effect waves-light btn-large sharpCorners lightBrown-hover grey darken-4" style="font-weight: bold; font-size: 20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
+</div>
 
 <div class="row" style="padding: 80px;">
     <div class="col s12">
@@ -12,9 +15,101 @@
     </div>
 
     <div>
-        <div style="margin-top: 20px;" id="tab1" class="col s12">Testing tab 1</div>
-        <div style="margin-top: 20px;" id="tab2" class="col s12">Testing tab 2</div>
-        <div  style="margin-top: 20px;" id="tab3" class="col s12">Testing tab 3</div>
+        @*TAB ONE*@
+        <div style="margin-top: 20px; background-color: #020305; font-size: 20px;" id="tab1" class="col s12 white-text flow-text">
+            <div class="row">
+                <div class="col s12 m5">
+                    <div class="card-panel z-depth-5" style="background-color: #54b798;">
+                        <span>
+                            <i style="margin-right: 10px;" class="fas fa-money-check-alt"></i>Average Monthly Spending
+                        </span>
+                        <span style="float:right">
+                            $345.09
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m5">
+                    <div class="card-panel teal z-depth-5">
+                        <span >
+                            <i class="fas fa-long-arrow-alt-up"></i> <i class="fas fa-long-arrow-alt-down" style="margin-right: 10px;"></i>Average Over | Under Budget
+                        </span>
+                        <span style="float:right">
+                            $45.09 under
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m5">
+                    <div class="card-panel z-depth-5" style="background-color: #54b798;">
+                        <span>
+                            <i style="margin-right: 10px;" class="fas fa-credit-card"></i>Most Common Purchase
+                        </span>
+                        <span style="float:right">
+                            Grocery (8 times per month)
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        @*TAB TWO*@
+        <div style="margin-top: 20px; background-color: #020305; font-size: 20px;" id="tab2" class="col s12 white-text flow-text">
+            <div class="row"> 
+                <div class="col s12 m5 offset-m4">
+                    <div class="card-panel z-depth-5" style="background-color: #54b798;">
+                        <span>
+                            <i style="margin-right: 10px;" class="far fa-calendar-alt"></i>Number of Months Under Budget
+                        </span>
+                        <span style="float:right">
+                            8 / 8 months
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m5 offset-m4">
+                    <div class="card-panel teal z-depth-5">
+                        <span>
+                            <i style="margin-right: 10px;" class="fas fa-balance-scale"></i>Compare Last Two Months
+                        </span>
+                        <span style="float:right">
+                            Jan: $1200
+                            Feb: $1149
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m5 offset-m4">
+                    <div class="card-panel z-depth-5" style="background-color: #54b798;">
+                        <span class="white-text">
+                            <i style="margin-right: 10px;" class="fas fa-piggy-bank"></i>Category with Most Savings
+                        </span>
+                        <span style="float:right">
+                            Bills: Avg $20 under
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        @*TAB THREE*@
+        <div style="margin-top: 20px; background-color: #020305; font-size: 20px;" id="tab3" class="col s12 white-text flow-text">
+            <div class="row">
+                <div class="col s12 m5" style="float:right">
+                    <select name="TypeOfBudget">
+                        <option value="0" disabled selected>1. Select a Category</option>
+                        <option value="1">Grocery</option>
+                        <option value="2">Housing</option>
+                        <option value="3">Bills</option>
+                        <option value="4">Entertainment</option>
+                        <option value="5">Gas</option>
+                        <option value="6">Miscellaneous</option>
+                    </select>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -40,5 +135,6 @@
 <script>
     $(document).ready(function(){
         $('.tabs').tabs();
+        $('select').formSelect();
     });
 </script>
