--- a/MyWebsite/Views/Budgets/BudgetInsights.cshtml
+++ b/MyWebsite/Views/Budgets/BudgetInsights.cshtml
@@ -16,7 +16,7 @@
 
     <div>
         @*TAB ONE*@
-        <div style="margin-top: 20px; background-color: #020305; font-size: 20px;" id="tab1" class="col s12 white-text flow-text">
+        <div style="margin-top: 20px; background-color: #080C10; font-size: 20px;" id="tab1" class="col s12 white-text flow-text waves-ripple">
             <div class="row">
                 <div class="col s12 m5">
                     <div class="card-panel z-depth-5" style="background-color: #54b798;">
@@ -55,7 +55,7 @@
             </div>
         </div>
         @*TAB TWO*@
-        <div style="margin-top: 20px; background-color: #020305; font-size: 20px;" id="tab2" class="col s12 white-text flow-text">
+        <div style="margin-top: 20px; background-color: #080C10; font-size: 20px;" id="tab2" class="col s12 white-text flow-text waves-ripple">
             <div class="row"> 
                 <div class="col s12 m5 offset-m4">
                     <div class="card-panel z-depth-5" style="background-color: #54b798;">
@@ -95,19 +95,19 @@
             </div>
         </div>
         @*TAB THREE*@
-        <div style="margin-top: 20px; background-color: #020305; font-size: 20px;" id="tab3" class="col s12 white-text flow-text">
+        <div style="margin-top: 20px; background-color: #080C10; font-size: 20px;" id="tab3" class="col s12 white-text flow-text waves-ripple">
             <div class="row">
-                <div class="col s12 m5" style="float:right">
-                    <select name="TypeOfBudget">
-                        <option value="0" disabled selected>1. Select a Category</option>
-                        <option value="1">Grocery</option>
-                        <option value="2">Housing</option>
-                        <option value="3">Bills</option>
-                        <option value="4">Entertainment</option>
-                        <option value="5">Gas</option>
-                        <option value="6">Miscellaneous</option>
-                    </select>
+                <div class="col s12 m7" style="float: right">
+                    <button id="food" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:10px;"><i class="material-icons left">local_dining</i>Food</button>
+                    <button id="housing" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:10px;"><i class="material-icons left">home</i>Housing</button>
+                    <button id="bills" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:10px;"><i class="material-icons left">monetization_on</i>Bills | Payments</button>
+                    <button id="entertainment" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:10px;"><i class="material-icons left">local_activity</i>Entertainment</button>
+                    <button id="gas" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:10px;"><i class="material-icons left">drive_eta</i>Gas | Auto</button>
+                    <button id="misc" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:10px;"><i class="material-icons left">gesture</i>Misc</button>
+
+                    
                 </div>
+                <div style="height: 300px;"></div>
             </div>
         </div>
     </div>
